--- a/css/about.css
+++ b/css/about.css
@@ -4,3 +4,37 @@
     justify-content: center;
     padding: 10px;
 }
+
+.parent-column {
+    display: flex;
+    flex-direction: column;
+    flex-flow: wrap;
+}
+
+.child {
+    width: 48%;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+hr {
+    border-top: 1px dashed black;
+}
+
+.line-break {
+    border-top: 1px dashed black;
+    margin-top: 10%;
+}
+
+.button {
+    text-decoration: none;
+    border: 2px solid black;
+    color: black;
+    border-radius: 10px;
+    padding: 5px 20px;
+}
+
+.button:hover {
+    background-color: black;
+    color: white;
+}
