learned more about css specificity with boxes, learned more about body padding

--- a/css/about.css
+++ b/css/about.css
@@ -6,8 +6,9 @@
 
 .parent-column {
     display: flex;
-    flex-direction: column;
-    flex-flow: wrap;
+    /* flex-direction: column; */
+    /* flex-flow: wrap; */
+    flex-wrap: wrap;
 }
 
 .child {
